--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,13 +9,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup Node.js
+      - name: Setup Node.js and Yarn
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
+          cache: yarn
       - name: Clean install
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: Test
-        run: npm run test
+        run: yarn run test
       - name: Build
-        run: npm run build
+        run: yarn run build
